tests/should_fail/syntax_and_non_bool.nv
module main

// SHOULD FAIL: || applied to non-Bool (String || String — no __or__ for String)
fn test() -> Bool {
    return "yes" || "no"
}
println(test())
